# health-dashboard

./: README.md  health_data.db  main.py  pyproject.toml
modules/: get-notion.py  notion.py
scratch/: scratch.css
setup/: sql_setup.py
static/: style.css
templates/: base.html  habits.html  index.html  navbar.html
