[tool.poetry]
name = "repl_nix_health-dashboard"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.0.0"
pandas = "^1.5.3"
Flask = "^2.2.3"
plotly = "^5.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
